# trading_bot

./: .env  .gitignore  DEPLOYMENT_CHECKLIST.md  GoldTradingEnv.py  Master-Complete-Design-Audit-PreTrade.md  Master-Roadmap-Final.md  README.md  analyze_backtest.py  audit_log.csv  backtest_mcx.py  backtest_strategy.py  backtest_strategy_rulebased.py  clean_csv.py  clean_mcx_csv.py  clean_slate.py  cleanup_csv.py  complete_project_documentation.md  config.json  config_alpaca.py  dashboard.py  download_gld_history.py  download_gold_data.py  email_alerts.py  evolve_bot.py  feed_live_data.py  fetch_market_news.py  fix_file.py  fix_gld_csv.py  fix_trader.py  goldbot.db  hft_engine.py  hybrid_model.py  indian_features.py  inspect_data.py  live_trading_alpaca.py  lstm_model.py  lstm_model_consolidated.py  main.py  main_bot.py  main_bot_advanced.py  (+50 more)
archive/: fix_file.py  fix_trader.py  test_telegram.py  test_tg.py
config/: config.py  settings.py
data/: GLD_daily.csv  MCX_gold_daily.csv  bot_state.db  feed_live_data.py  gld_data.csv  market_news.csv  mcx_gold_data.csv  mcx_gold_historical.csv
execution/: base_broker.py  calendar_filter.py  connection_manager.py  data_handler.py  db_manager.py  journal_manager.py  mt5_broker.py  paper_broker.py  risk_manager.py  telegram_alerts.py
logs/: paper_equity.csv  paper_equity_mcx.csv  test_monitor.csv  training_monitor.csv
models/: feature_cols.pkl  gld_scaler.pkl  lstm_best.h5  lstm_consolidated.h5  lstm_consolidated_history.json  lstm_consolidated_scaler.pkl  lstm_gld_direction.h5  lstm_gld_scaler_min.npy  lstm_gld_scaler_scale.npy  lstm_mcx_traintest.h5  lstm_model.h5  lstm_model.pkl  ppo_gold_agent_history.json  scaler.pkl  scaler.save  scaler_mcx_traintest.pkl
raw/: MCX_gold_raw.csv
reports/: performance_report.html
results/: backtest_metrics.json  backtest_metrics_rulebased.json  backtest_trades.csv  backtest_trades_rulebased.csv
src/: __init__.py  alpaca_broker.py  alpaca_connector.py  audit.py  backtest.py  backtest_engine.py  broker_manager.py  compliance.py  currency_monitor.py  database.py  dual_market_bot.py  economic_calendar_monitor.py  features.py  fiscal_policy_loader.py  geopolitical_risk_monitor.py  global_cues_monitor.py  paper_broker.py  paper_trading.py  pivot_level_calculator.py  risk_manager.py  (+6 more)
(+116 files in other folders)
