
[tool.ruff]
# Target Python 3.13 specifically
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# F: Pyflakes, E/W: pycodestyle, I: isort, B: bugbear, UP: pyupgrade
select = ["F", "E", "W", "I", "B", "UP", "N", "SIM"]
ignore = [
    "E501", # Line length handled by formatter
    "N806", # Allow uppercase X_train in functions
    "N803", # Allow uppercase X_train in arguments
    "N813", # Allow 'import MetaTrader5 as mt5'
    "E722", # We will fix these manually, but can ignore for now if needed
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[project]
name = "gold-trading-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "metatrader5>=5.0.5509",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "ruff>=0.14.13",
    "shimmy>=2.0.0",
    "stable-baselines3[extra]>=2.7.1",
    "ta>=0.11.0",
]
