[project]
name = "gold-trading-bot"
version = "0.1.0"
description = "Institutional Grade Gold Trading Bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "MetaTrader5",
    "stable-baselines3[extra]",
    "pandas",
    "ta",
    "optuna",
    "gymnasium",
    "pydantic>=2.12.5",
    "streamlit>=1.53.0",
    "plotly>=6.5.2",
    "websocket-client>=1.9.0",
    "redis>=7.1.0",
    "alpaca-py>=0.43.2",
    "feedparser>=6.0.12",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
    "pip-audit",
    "pytest",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
# Target Python 3.13 specifically
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# F: Pyflakes, E/W: pycodestyle, I: isort, B: bugbear, UP: pyupgrade
select = ["F", "E", "W", "I", "B", "UP", "N", "SIM"]
ignore = [
    "E501", # Line length handled by formatter
    "N806", # Allow uppercase X_train in functions
    "N803", # Allow uppercase X_train in arguments
    "N813", # Allow 'import MetaTrader5 as mt5'
    "E722", # We will fix these manually, but can ignore for now if needed
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
